# wk_deb

./: LICENSE  Makefile  bash.txt  install.sh  kylin-ai-cryptojacking-detect_0.1.0-1.fc40_all.deb  pyproject.toml  readme.md  spec.txt
packaging/: kylin-ai-cryptojacking-detect.spec
src/kylin_ai_cryptojacking_detect.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/miner_sentinel_l1/src/config/: monitoring_rules.yaml
src/miner_sentinel_l1/src/status_monitor/: analyzer.py  collector.py  host_status_judge.py  utils.py  window.py
src/miner_sentinel_l2/src/config/: pid_whitelist.yaml
src/miner_sentinel_l2/src/detectors/: cpu_detector.py  memory_detector.py  network_detector.py  pid_status_scan.py  process_detector.py
src/miner_sentinel_l2/src/models/: detection_result.py
src/miner_sentinel_l2/src/utils/: system_utils.py  whitelist_manager.py
src/miner_sentinel_l3/src/: cryptojacking.py  custom.py  listenbitcoin.py  memory_info.py
src/msentinel_cli/: cli.py
